--- a/Bin/debug_server.cfg
+++ b/Bin/debug_server.cfg
@@ -6,8 +6,8 @@ bind_port=9110
 # Database
 database_ip=127.0.0.1
 database_username=root
-database_password=
-database_name=phatac
+database_password=root
+database_name=classic_dereth
 
 # World
 world_name=Classic Dereth
@@ -29,9 +29,9 @@ colored_sentinels=0
 spawn_landscape=1
 spawn_static_creatures=1
 everything_unlocked=0
-town_crier_buffs=0
+town_crier_buffs=1
 town_crier_buff_level=7
-town_crier_buff_banes=0
+town_crier_buff_banes=7
 
 # More options can be added at a later time, recommended to set these to "1" for exploration purposes.
 enable_teleport_commands=0
